fix: container overflow-x & improve image placeholder dimensions in CustomImage component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,9 +2,11 @@
 @plugin '@tailwindcss/typography';
 
 @utility container {
-  margin-inline: auto;
-  padding-inline: 1rem;
-  max-width: var(--breakpoint-xl);
+ margin-inline: auto;
+ padding-inline: 1rem;
+ max-width: var(--breakpoint-xl);
+ overflow-x: hidden;
+ overflow-wrap: break-word;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
